test jlhttp server for dlna